--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,8 @@
-Flask==3.0.0
+Flask==2.3.3
 requests==2.31.0
 beautifulsoup4==4.12.2
 sentence-transformers==2.2.2
-fpdf2==2.7.6
-google-api-python-client==2.108.0
-google-auth==2.25.2
-google-auth-oauthlib==1.2.0
-google-auth-httplib2==0.2.0
-gunicorn==21.2.0
-lxml==4.9.3
-torch==2.5.1
-transformers==4.47.1
+huggingface-hub==0.20.1  # ✅ This is <1.0
+fpdf2==2.7.5
+gunicorn==20.1.0
+torch==2.1.0 --index-url https://download.pytorch.org/whl/cpu
