--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,9 @@ Flask==2.3.3
 requests==2.31.0
 beautifulsoup4==4.12.2
 sentence-transformers==2.2.2
-huggingface-hub==0.20.1  # ✅ This is <1.0
+huggingface-hub==0.20.1
 fpdf2==2.7.5
 gunicorn==20.1.0
 torch==2.1.0 --index-url https://download.pytorch.org/whl/cpu
+torchvision==0.16.0  # Matches torch 2.1.0
+transformers==4.36.0  # Compatible with huggingface-hub 0.20.1
